[package]
name = "flower2d"
description = "Stupid simple 2D graphics library"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
keywords = ["cpu", "graphics", "graphics-library", "2d", "2d-graphics"]
categories = ["graphics"]
repository = "https://github.com/zeozeozeo/flower2d/"
readme = "README.md"
authors = ["zeozeozeo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
